feat(landing): ship pilot UX/content updates with submit regression test

--- a/index.html
+++ b/index.html
@@ -3,20 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fundraising Pilot - Twenty</title>
+    <title>Fundraising for Twenty: Pilot Cohort</title>
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="alternate icon" href="/favicon.ico" />
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta
+      name="description"
+      content="A nonprofit fundraising module built on Twenty CRM. Apply to a small, supported pilot and evaluate real workflows with real data."
+    />
+    <meta name="author" content="Twenty" />
 
-    <meta property="og:title" content="Fundraising Pilot - Twenty" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:site_name" content="Fundraising for Twenty" />
+    <meta property="og:title" content="Fundraising for Twenty: Pilot Cohort" />
+    <meta
+      property="og:description"
+      content="A nonprofit fundraising module built on Twenty CRM. Apply to a small, supported pilot and evaluate real workflows with real data."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://fundraising-pilot-twenty.vercel.app/" />
+    <meta property="og:image" content="/og.png" />
+    <meta property="og:image:width" content="1536" />
+    <meta property="og:image:height" content="1024" />
+    <meta property="og:image:alt" content="Fundraising for Twenty: Pilot Cohort" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Fundraising for Twenty: Pilot Cohort" />
+    <meta
+      name="twitter:description"
+      content="A nonprofit fundraising module built on Twenty CRM. Apply to a small, supported pilot and evaluate real workflows with real data."
+    />
+    <meta name="twitter:image" content="/og.png" />
   </head>
 
   <body>
