refine(copy): simplify landing and form language

--- a/index.html
+++ b/index.html
@@ -3,33 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fundraising for Twenty: Pilot Cohort</title>
+    <title>Nonprofit Fundraising CRM Pilot | Twenty</title>
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="alternate icon" href="/favicon.ico" />
     <meta
       name="description"
-      content="A nonprofit fundraising module built on Twenty CRM. Apply to a small, supported pilot and evaluate real workflows with real data."
+      content="Evaluate a modern nonprofit fundraising CRM in a supported pilot. Test real donation workflows with real data."
     />
     <meta name="author" content="Twenty" />
 
     <meta property="og:site_name" content="Fundraising for Twenty" />
-    <meta property="og:title" content="Fundraising for Twenty: Pilot Cohort" />
+    <meta property="og:title" content="Nonprofit Fundraising CRM Pilot | Twenty" />
     <meta
       property="og:description"
-      content="A nonprofit fundraising module built on Twenty CRM. Apply to a small, supported pilot and evaluate real workflows with real data."
+      content="Evaluate a modern nonprofit fundraising CRM in a supported pilot. Test real donation workflows with real data."
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://fundraising-pilot-twenty.vercel.app/" />
     <meta property="og:image" content="/og.png" />
     <meta property="og:image:width" content="1536" />
     <meta property="og:image:height" content="1024" />
-    <meta property="og:image:alt" content="Fundraising for Twenty: Pilot Cohort" />
+    <meta
+      property="og:image:alt"
+      content="Nonprofit fundraising CRM pilot landing page"
+    />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Fundraising for Twenty: Pilot Cohort" />
+    <meta name="twitter:title" content="Nonprofit Fundraising CRM Pilot | Twenty" />
     <meta
       name="twitter:description"
-      content="A nonprofit fundraising module built on Twenty CRM. Apply to a small, supported pilot and evaluate real workflows with real data."
+      content="Evaluate a modern nonprofit fundraising CRM in a supported pilot. Test real donation workflows with real data."
     />
     <meta name="twitter:image" content="/og.png" />
   </head>
